<resources>
    <string name="app_name">Multi Utility App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Multi Utility App</string>
    <string name="nav_header_subtitle">Simplifying Everyday Tasks</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_calculator">Calculator</string>
    <string name="menu_cc">Currency Converter</string>
    <string name="menu_c">Calender</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_tdList">To-Do-List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="currencies">
        <item>United States Dollar</item>
        <item>Canadian Dollar</item>
        <item>Chinese Yuan</item>
        <item>Euro</item>
        <item>Hong Kong Dollar</item>
        <item>South Korean won</item>
        <item>Russian Ruble</item>
        <item>Japanese Yen</item>
        <item>Singapore Dollar</item>
        <item>Sri Lankan Rupee</item>
        <item>Pakistan Rupee</item>
        <item>UAE Dirham</item>
    </string-array>


</resources>