<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_baseline_calculate"
            android:title="@string/menu_calculator" />
        <item
            android:id="@+id/nav_currency"
            android:icon="@drawable/ic_baseline_monetization"
            android:title="@string/menu_cc" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_baseline_note"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_tdList"
            android:icon="@drawable/ic_baseline_list"
            android:title="@string/menu_tdList" />
    </group>
</menu>