<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.multiutilityapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_calculator"
        android:name="com.example.multiutilityapp.ui.calculator.CalculatorFragment"
        android:label="@string/menu_calculator"
        tools:layout="@layout/fragment_calculator" />

    <fragment
        android:id="@+id/nav_currency"
        android:name="com.example.multiutilityapp.ui.currency.CurrencyFragment"
        android:label="@string/menu_cc"
        tools:layout="@layout/fragment_currency" />
    <fragment
        android:id="@+id/nav_calender"
        android:name="com.example.multiutilityapp.ui.calender.CalenderFragment"
        android:label="@string/menu_c"
        tools:layout="@layout/fragment_calender" />
    <fragment
        android:id="@+id/nav_tdList"
        android:name="com.example.multiutilityapp.ui.todolist.todolistFragment"
        android:label="@string/menu_tdList"
        tools:layout="@layout/fragment_todolist" />
    
</navigation>